--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <div class="spinner"></div>
         <p class="loading-text">Recibiendo Invitación</p>
     </div>
+    <div class="navbar">
+        <button class="navbar-btn" onclick="scrollToSection('location')">
+            <i class="fas fa-map-marker-alt"></i>
+        </button>
+        <button class="navbar-btn" onclick="scrollToSection('confirmation')">
+            <i class="fas fa-calendar-check"></i>
+        </button>
+    </div>
     <div id="welcome-modal">
         <div id="particles-container"></div> 
         <div class="welcome-modal-content fade-in">
