--- a/index.html
+++ b/index.html
@@ -131,10 +131,8 @@
                     </div>
                     <div class="wrapper-rectangle1">
                         <div class="rectangle1">
-                            <p class="elementor-heading-rectangle1">Ubicación</p>
-                            <p class="text-rectangle1">Colonia Vicente Solis / San José centro</p>
                             <div class="schedule-and-address">
-                                <p class="elementor-heading-rectangle1">Horarios</p>
+                                <p class="elementor-heading-rectangle1">Horario</p>
                                 <div class="time-rectangle1">
                                     <p class="time-item1"><i class="far fa-clock"></i> 5:30 PM <span class="time-label">(Inicio)</span></p>
                                     <p class="time-item2"><i class="far fa-clock"></i> 6:00 PM <span class="time-label">(Ceremonia Civil)</span></p>
@@ -142,6 +140,9 @@
                                 <p class="elementor-heading-rectangle1">Dirección</p>
                                 <p class="text-rectangle1">Calle 81 B #453 F x 36-A y 40</p>
                             </div>
+                            <p class="elementor-heading-rectangle1">Colonia</p>
+                            <p class="text-rectangle1">Colonia Vicente Solis / San José centro</p>
+                            <p class="elementor-heading-rectangle1">Ubicación</p>
                             <iframe class="map-iframe"
                                 src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3844.075209776036!2d-89.61582468618111!3d20.95158877879006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjDCsDU3JzA1LjgiTiA4OcKwMzYnNDcuNCJX!5e0!3m2!1ses-419!2smx!4v1741362844925!5m2!1ses-419!2smx"
                                 style="border:0;" allowfullscreen="" loading="lazy"
